score/testdata/ingress-targets-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  namespace: testspace
spec:
  rules:
  - http:
      paths:
      - path: /app
        backend:
          serviceName: app-service
          servicePort: 5601
---
kind: Service
apiVersion: v1
metadata:
  name: app-service
  namespace: testspace
spec:
  selector:
    app: kibana
  ports:
  - name: http
    protocol: TCP
    port: 5601
